src/css/header.css
.header {
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    display: flex;
    padding: 0 0 0.25rem 0.5rem;
    width: 100%;
}

.nav-container {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    padding-left: 2rem;
    padding-right: 2rem;
}

.logo {
    margin-top: 2rem;
    margin-bottom: 1rem;
    font-size: 1.46rem;
    line-height: 1.1;
}

.navbar {
    position: relative;
    width: 33%;
    border-bottom: none;
    display: inline-block;
    height: auto;
}

.translate-button {
    color: #fff;
    background: #000;
    line-height: .9;
    padding: 1rem 0 1rem 1rem;
    font-weight: 700;
    font-size: .93rem;
}

/* from metro.net */

  .goog-te-menu-frame {
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25) !important;
    min-width: 225px;
  }
  .goog-te-menu-value {
    font-size: 0 !important;
  }
  /* .header.header--is-open-menu .header-bar--mobile {
    padding-top: 50px;
  }
  .header.header--is-open-menu .header-bar--mobile .button.button--header-close {
    display: flex;
  }
  .header.header--is-open-menu .header-bar--mobile .button.button--header-open {
    display: none;
  }
  .header.header--is-open-menu .header-bar--mobile .header-bar__bar {
    position: fixed;
    top: 0;
    width: 100%;
  }
  .header.header--is-open-menu .header-bar--mobile .header-bar__menu-content {
    transform: translateX(100vw);
  } */
  .header-bar__translate {
    position: relative;
  }
  /* .header.header--is-open-menu .header__shroud,
  .header.header--is-open-search .header__shroud,
  .header.header--is-open-translate .header__shroud {
    background-color: rgba(0, 0, 0, 0.25);
    bottom: 0;
    height: 100%;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    width: 100%;
    z-index: 1;
  } */
  .header.header--is-open-translate .header-bar__translate {
    background: #000;
    display: block;
  }
  .header.header--is-open-translate
    .header-bar__translate
    .header-bar__translate-presentation {
    color: #262626;
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    letter-spacing: 0.05px;
    line-height: 22px;
  }
  .header.header--is-open-translate
    .header-bar__translate
    .header-bar__translate-presentation
    img {
    filter: brightness(0) saturate(100%) invert(21%) sepia(0%) saturate(52%)
      hue-rotate(248deg) brightness(87%) contrast(112%);
  }
  .header-bar__translate-clickable {
    cursor: pointer;
    height: 100%;
    opacity: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 1;
  }
  .header-bar__translate-clickable .goog-te-gadget,
  .header-bar__translate-clickable .goog-te-gadget-simple,
  .header-bar__translate-clickable #google_translate_element {
    display: block !important;
    height: 100%;
    width: 100%;
  }
  .header-bar__translate-presentation {
    align-items: center;
    color: #fff;
    display: flex;
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
    font-style: normal;
    font-weight: 600;
    height: 100%;
    letter-spacing: 0.05px;
    line-height: 22px;
    padding: 10px 0px 10px 10px;
  }
  .header-bar__translate-presentation img {
    margin-right: 6px;
    width: 16px;
  }

  @media (max-width: 640px) {
    .goog-te-menu-frame {
      width: 100% !important;
    }
  }
  /* @media (min-width: 1280px) {
    .button.button--header-translate {
      width: auto;
    } */

